--- a/_sources/lectures/nlp_deep/transformers.ipynb
+++ b/_sources/lectures/nlp_deep/transformers.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Transformers\n",
     "\n",
-    "[On Transformers, TimeSformers, And Attention](https://www.topbots.com/transformers-timesformers-and-attention/)\n",
+    "On Transformers, TimeSformers, And Attention\n",
     "\n",
     "```{image} ../figs/deep_nlp/transformers/entelecheia_transformers.png\n",
     ":alt: transformers\n",
@@ -142,38 +142,25 @@
    "source": [
     "## Attention is all you need?\n",
     "\n",
-    "Is there a mechanism that we can compute in a parallelized manner that allows us to extract the information we need from the sentence? \n",
-    "\n",
-    "<!-- ![](../figs/deep_nlp/transformers/attention.gif) -->\n",
-    "\n",
     "```{figure} ../figs/deep_nlp/transformers/attention.gif\n",
     "---\n",
     "width: 70%\n",
     "name: fig-attention\n",
     "---\n",
-    "Attention mechanism\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95d56947",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "> `I gave my dog Charlie some food.`\n",
+    "Attention\n",
+    "```\n",
     "\n",
-    "- Focusing on the word “gave,” what other words in the sentence should we pay attention on to add context to the word “gave”?\n",
-    "- You might ask yourself, “Who gave the food to the dog?”\n",
-    "- In this case, the attention mechanism would focus on the words “I.”\n",
-    "- If you were to ask yourself, “To whom did I give the food?”\n",
-    "- The attention mechanism would focus on the words “dog” and “Charlie.”\n",
-    "- If you were to ask yourself, “What did I give to the dog?”\n",
-    "- The attention mechanism would focus on the words “food.”"
+    "The attention mechanism is a key component of the Transformer architecture that allows it to extract relevant information from a sentence or sequence in a parallelized manner, as opposed to the sequential processing of traditional Recurrent Neural Networks (RNNs). The attention mechanism enables the model to selectively focus on different parts of the input data that are most relevant to the task at hand, and it can do so simultaneously for all elements in the sequence.\n",
+    "\n",
+    "Consider the example sentence: `I gave my dog Charlie some food.`\n",
+    "\n",
+    "In this context, let's explore how the attention mechanism can identify important relationships between words in the sentence to better understand its meaning.\n",
+    "\n",
+    "1. Focusing on the word \"gave\", we may want to determine which words in the sentence provide context to the action of giving. In this case, we could ask, \"Who gave the food to the dog?\" The attention mechanism would recognize the importance of the word \"I\" in answering this question, as it indicates the subject performing the action.\n",
+    "2. Similarly, we might want to determine the recipient of the action. By asking, \"To whom did I give the food?\", the attention mechanism would identify the words \"dog\" and \"Charlie\" as crucial for understanding the recipient of the action.\n",
+    "3. Finally, to determine the object of the action, we could ask, \"What did I give to the dog?\" Here, the attention mechanism would focus on the word \"food\", as it represents the object being given.\n",
+    "\n",
+    "In each of these cases, the attention mechanism can identify and focus on the most relevant words in the sentence to provide context and meaning to the central action of \"gave\". By doing so, the model can extract essential information and relationships within the sentence in a highly parallelized and efficient manner. This powerful mechanism is at the core of the Transformer architecture, enabling it to excel in various natural language processing tasks, such as machine translation, text summarization, and question answering.\n"
    ]
   },
   {
@@ -195,6 +182,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d044f4f5",
    "metadata": {
@@ -204,7 +192,13 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/attention-calculate.gif)"
+    "```{figure} ../figs/deep_nlp/transformers/attention-calculate.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-attention-calculate\n",
+    "---\n",
+    "Attention mechanism\n",
+    "```\n"
    ]
   },
   {
@@ -234,6 +228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a76a477",
    "metadata": {
@@ -243,7 +238,13 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/attention-focus.jpeg)"
+    "```{figure} ../figs/deep_nlp/transformers/attention-focus.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-attention-focus\n",
+    "---\n",
+    "Attention implementation\n",
+    "```\n"
    ]
   },
   {
@@ -289,6 +290,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bb74d063",
    "metadata": {
@@ -298,10 +300,17 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/attention-multihead.jpeg)"
+    "```{figure} ../figs/deep_nlp/transformers/attention-multihead.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-attention-multihead\n",
+    "---\n",
+    "Multi-head attention\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "332a847d",
    "metadata": {
@@ -315,7 +324,13 @@
     "\n",
     "The Transformer architecture is composed of two main components: the encoder and the decoder.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/transformer-architecture.gif)"
+    "```{figure} ../figs/deep_nlp/transformers/attention-architecture.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-attention-architecture\n",
+    "---\n",
+    "Transformer architecture\n",
+    "```\n"
    ]
   },
   {
@@ -366,6 +381,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75292edb",
    "metadata": {
@@ -375,10 +391,18 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/transformer-best.jpeg)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/transformer-best.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-transformer-best\n",
+    "---\n",
+    "Problems with the Transformer architecture\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9daaf4d9",
    "metadata": {
@@ -390,7 +414,13 @@
    "source": [
     "## Problems with the Transformer architecture\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/transformer-problem.gif)"
+    "```{figure} ../figs/deep_nlp/transformers/transformer-problem.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-transformer-problem\n",
+    "---\n",
+    "Problems with the Transformer architecture\n",
+    "```\n"
    ]
   },
   {
@@ -414,6 +444,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffd4a1db",
    "metadata": {
@@ -423,7 +454,14 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/transformer-N2.gif)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/transformer-N2.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-transformer-N2\n",
+    "---\n",
+    "Attention matrix\n",
+    "```\n"
    ]
   },
   {
@@ -467,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0b94eb11",
    "metadata": {
@@ -476,10 +515,17 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/transformer-tug-of-war.jpeg)"
+    "```{figure} ../figs/deep_nlp/transformers/transformer-tug-of-war.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-transformer-tug-of-war\n",
+    "---\n",
+    "Tug of war between the self-attention mechanism and skip connections and MLP\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "41eac4dd",
    "metadata": {
@@ -493,7 +539,14 @@
     "\n",
     "\"If Transformers have been found to be so effective in the field of Natural Language Processing, how will they perform with images?\"\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/vit.jpeg)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/vit.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-vit\n",
+    "---\n",
+    "Vision Transformer\n",
+    "```\n"
    ]
   },
   {
@@ -514,6 +567,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e56a5851",
    "metadata": {
@@ -531,11 +585,17 @@
     "- This means that the calculation of attention would require $O(N^4)$ calculations.\n",
     "- This is not a viable solution because it would require a lot of computation.\n",
     "\n",
-    "\n",
-    "![](../figs/deep_nlp/transformers/vit-pixels.gif)"
+    "```{figure} ../figs/deep_nlp/transformers/vit-pixels.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-vit-pixels\n",
+    "---\n",
+    "Vision Transformer with pixels\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a5a5429",
    "metadata": {
@@ -550,10 +610,18 @@
     "- The image is divided into patches.\n",
     "- Each patch is converted into a vector using a linear projection.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/vit-projection.gif)"
+    "```{figure} ../figs/deep_nlp/transformers/vit-projection.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-vit-projection\n",
+    "---\n",
+    "Linear projection of the patches\n",
+    "```\n",
+    "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "42763b15",
    "metadata": {
@@ -570,7 +638,14 @@
     "- The result is a vector that represents the image.\n",
     "- The vector is then passed to a classifier to obtain the final result.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/vit-architecture.gif)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/vit-architecture.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-vit-architecture\n",
+    "---\n",
+    "Vision Transformer Architecture\n",
+    "```\n"
    ]
   },
   {
@@ -598,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66831e1a",
    "metadata": {
@@ -607,10 +683,18 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/tnt.gif)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/tnt.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-tnt\n",
+    "---\n",
+    "Transformer in Transformer\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fe6a4018",
    "metadata": {
@@ -620,7 +704,14 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/tnt-architecture.gif)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/tnt-architecture.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-tnt\n",
+    "---\n",
+    "Transformer in Transformer Architecture\n",
+    "```\n"
    ]
   },
   {
@@ -645,6 +736,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3824c240",
    "metadata": {
@@ -654,12 +746,11 @@
     "tags": []
    },
    "source": [
-    "The authors have suggested several new attention mechanisms, from those that focus exclusively on space, used primarily as a reference point, to those that compute attention axially, scattered, or jointly between space and time.\n",
-    "\n",
-    "![](../figs/deep_nlp/transformers/timesformer-architecture.gif)"
+    "The authors have suggested several new attention mechanisms, from those that focus exclusively on space, used primarily as a reference point, to those that compute attention axially, scattered, or jointly between space and time."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1dd1b68b",
    "metadata": {
@@ -669,7 +760,21 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/timesformer-attentions.jpeg)"
+    "```{figure} ../figs/deep_nlp/transformers/timesformer-architecture.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-timesformer-architecture\n",
+    "---\n",
+    "TimeSformer Architecture\n",
+    "```\n",
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/timesformer-attentions.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-timesformer-attentions\n",
+    "---\n",
+    "TimeSformer Attention Mechanisms\n",
+    "```\n"
    ]
   },
   {
@@ -690,6 +795,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c8022aa",
    "metadata": {
@@ -701,7 +807,13 @@
    "source": [
     "We can see this in the following visualization where each video is represented by a point in space and its colour represents the category it belongs to.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/timesformer-divide.jpeg)"
+    "```{figure} ../figs/deep_nlp/transformers/timesformer-divide.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-timesformer-divide\n",
+    "---\n",
+    "TimeSformer Divide Space-Time Attention\n",
+    "```\n"
    ]
   },
   {
@@ -721,6 +833,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8413493",
    "metadata": {
@@ -730,10 +843,18 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/transformers/timesformer-resolution.jpeg)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/timesformer-resolution.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-timesformer-resolution\n",
+    "---\n",
+    "TimeSformer Resolution\n",
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "655b38fe",
    "metadata": {
@@ -745,7 +866,15 @@
    "source": [
     "In Vision Transformers it is known that a larger training dataset often results in better accuracy. This was also checked by the authors on TimeSformers and again, as the number of training videos considered increases, the accuracy also increases.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/timesformer-dataset.jpeg)"
+    "\n",
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/timesformer-dataset.jpeg\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-timesformer-dataset\n",
+    "---\n",
+    "TimeSformer Dataset\n",
+    "```\n"
    ]
   },
   {
@@ -791,6 +920,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb941e63",
    "metadata": {
@@ -804,7 +934,14 @@
     "\n",
     "One of the most important applications of Transformers in the field of Multimodal Machine Learning is VATT {cite}`akbari2021vatt`.\n",
     "\n",
-    "![](../figs/deep_nlp/transformers/vatt.gif)"
+    "\n",
+    "```{figure} ../figs/deep_nlp/transformers/vatt.gif\n",
+    "---\n",
+    "width: 70%\n",
+    "name: fig-vatt\n",
+    "---\n",
+    "VATT Architecture\n",
+    "```\n"
    ]
   },
   {
