--- a/_sources/lectures/nlp_deep/transformers.ipynb
+++ b/_sources/lectures/nlp_deep/transformers.ipynb
@@ -322,34 +322,21 @@
    "source": [
     "## Problems with the Transformer architecture\n",
     "\n",
+    "The Transformer architecture has revolutionized the field of natural language processing, offering significant improvements in various tasks. However, it also comes with some inherent limitations:\n",
+    "\n",
     "```{figure} ../figs/deep_nlp/transformers/transformer-problem.gif\n",
     "---\n",
     "width: 70%\n",
     "name: fig-transformer-problem\n",
     "---\n",
     "Problems with the Transformer architecture\n",
-    "```\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "5a1e555f",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "The Transformer architecture is a very powerful architecture, but it has some problems.\n",
+    "```\n",
     "\n",
-    "- One of its strengths is also its weakness, the calculation of attention is very expensive.\n",
-    "- The attention mechanism is very expensive because it requires a lot of computation.\n",
-    "- In order to calculate the attention of each word with respect to all the others I have to perform $N^2$ calculations.\n",
-    "- Graphically you can imagine a matrix that has to be filled with the attention values of each word compared to any other word.\n",
-    "- Optionally and usually on the decoder, it is possible to calculate the masked attention to avoid the calculation of the attention of a word with respect to the following words.\n",
-    "- The masked attention is a mechanism that allows you to calculate the attention of a word with respect to the previous words.\n"
+    "1. **Computational Complexity**: One of the main strengths of the Transformer architecture, its attention mechanism, also contributes to its primary weakness: high computational complexity. The attention mechanism requires a significant amount of computation, particularly when dealing with long input sequences.\n",
+    "2. **Quadratic Scaling**: In order to compute the attention for each word with respect to all other words, the model needs to perform $N^2$ calculations, where N is the number of words in the input. This can be visualized as filling a matrix with attention values for each word pair, leading to quadratic scaling in terms of computational complexity.\n",
+    "3. **Masked Attention**: To mitigate the computational complexity to some extent, particularly in the decoder, masked attention is sometimes used. Masked attention is a mechanism that calculates the attention of a word only with respect to previous words, excluding the following words in the sequence. While this approach reduces complexity, it still doesn't fully resolve the issue, especially for very long sequences.\n",
+    "\n",
+    "In summary, while the Transformer architecture has significantly advanced the field of natural language processing, it comes with some inherent challenges, particularly in terms of computational complexity and quadratic scaling. Efforts to address these issues are ongoing, with researchers continually exploring new techniques and optimizations to further improve the efficiency and performance of Transformer-based models.\n"
    ]
   },
   {
@@ -385,11 +372,21 @@
    "source": [
     "## Attention Is Not All You Need\n",
     "\n",
-    "In March 2021, Google researchers published a paper titled, \"Attention Is Not All You Need\" {cite}`dong2021attention`.\n",
+    "In March 2021, Google researchers published a paper titled \"Attention Is Not All You Need\" {cite}`dong2021attention`, challenging the prevailing notion that the self-attention mechanism was the sole key to the Transformer's success.\n",
     "\n",
-    "- The researchers conducted experiments analyzing the behaviour of the self-attention mechanism conducted without any of the other components of the transformers.\n",
-    "- They found that it converges to a rank 1 matrix with a doubly exponential rate.\n",
-    "- This means that this mechanism, by itself, is practically useless.\n"
+    "In the paper, the researchers conducted experiments specifically analyzing the behavior of the self-attention mechanism in isolation, without incorporating any of the other components that make up the Transformer architecture. They sought to understand the self-attention mechanism's limitations and how it interacts with the other components of the Transformer model.\n",
+    "\n",
+    "Their findings revealed that, when used in isolation, the self-attention mechanism converges to a rank 1 matrix with a doubly exponential rate. In other words, the self-attention mechanism alone is not sufficient to achieve meaningful results, and it is practically ineffective without the other components of the Transformer architecture.\n",
+    "\n",
+    "The research underscores the importance of considering the interplay of various components within the Transformer model, rather than solely focusing on the attention mechanism. This insight can help guide further development and improvement of Transformer-based models, as researchers continue to explore the optimal balance and combination of different components for various natural language processing tasks.\n",
+    "\n",
+    "```{note}\n",
+    "In the context of the paper \"Attention Is Not All You Need,\" \"convergence to a rank 1 matrix\" refers to the behavior of the self-attention mechanism when used in isolation. A rank 1 matrix is a matrix whose columns (or rows) can be expressed as a linear combination of a single vector. In other words, all the columns (or rows) of the matrix are essentially scaled versions of the same vector.\n",
+    "\n",
+    "Converging to a rank 1 matrix implies that the self-attention mechanism, when used alone, produces an output that has very limited expressiveness and diversity. Since the information in a rank 1 matrix can be represented by just one vector, it indicates that the self-attention mechanism isn't capable of capturing complex relationships and patterns in the data by itself.\n",
+    "\n",
+    "The researchers found that combining the self-attention mechanism with other components of the Transformer architecture, like skip connections and MLPs, is essential to achieving the powerful performance that the Transformer model is known for. The combination of these components allows the Transformer to overcome the limitations of the self-attention mechanism and effectively capture complex patterns and dependencies in the input data.\n",
+    "```\n"
    ]
   },
   {
@@ -405,33 +402,23 @@
    "source": [
     "### So why are transformers so powerful?\n",
     "\n",
-    "- The researchers found that the self-attention mechanism is not the only component that makes transformers so powerful.\n",
-    "- It is due to a tug of war between the self-attention mechanism that tends to reduce the rank of the matrix and two other components of transformers, skip connections and MLP.\n",
-    "- The skip connections allow the model to diversify the distribution of paths avoiding all the same path.\n",
-    "- This drastically reduces the probability of the model converging to a rank 1 matrix.\n",
-    "- The MLP instead manages to increase the rank of the matrix due to the non-linearity of the activation function.\n",
-    "- Therefore, attention is not all you need, but it is necessary to have skip connections and MLP to make transformers powerful.\n",
-    "- The transformer architecture manages to use the self-attention mechanism to its advantage to achieve impressive results.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "0b94eb11",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
+    "The success of the Transformer model is not solely due to the self-attention mechanism, as previously thought. The Google researchers discovered that the power of the Transformer model comes from a combination of components working together:\n",
+    "\n",
+    "1. **Self-attention mechanism**: This component allows the model to focus on different parts of the input, depending on their relevance to the task at hand.\n",
+    "\n",
+    "2. **Skip connections**: Also known as residual connections, skip connections allow the model to maintain information from earlier layers without losing it in the process. This helps the model diversify the distribution of paths and avoid convergence to a rank 1 matrix, which would make it ineffective.\n",
+    "\n",
+    "3. **MLP (Multilayer Perceptron)**: The MLP component adds non-linearity to the model due to the activation functions used in its layers. This non-linearity helps increase the rank of the matrix, contributing to the model's expressive power.\n",
+    "\n",
     "```{figure} ../figs/deep_nlp/transformers/transformer-tug-of-war.jpeg\n",
     "---\n",
     "width: 70%\n",
     "name: fig-transformer-tug-of-war\n",
     "---\n",
     "Tug of war between the self-attention mechanism and skip connections and MLP\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "In summary, the true strength of the Transformer model comes from the combined effect of the self-attention mechanism, skip connections, and MLP. These components work together in a delicate balance to make the Transformer architecture highly effective at processing and understanding complex input data, ultimately leading to its impressive performance in various natural language processing tasks.\n"
    ]
   },
   {
