--- a/book/lectures/nlp_deep/bert/bertviz.ipynb
+++ b/book/lectures/nlp_deep/bert/bertviz.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfdc61fb",
    "metadata": {
@@ -10,239 +11,7 @@
     "tags": []
    },
    "source": [
-    "# BERT: Bidirectional Encoder Representations from Transformers\n",
-    "\n",
-    "![bert](../figs/deep_nlp/bert/entelecheia_bert.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66d50cc3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "- The year 2018 marked a turning point for the field of Natural Language Processing (NLP).\n",
-    "- The BERT {cite}`devlin2018bert` paper introduced a new language representation model that outperformed all previous models on a wide range of NLP tasks.\n",
-    "- BERT is a deep bidirectional transformer model that is pre-trained on a large corpus of unlabeled text.\n",
-    "- The model is trained to predict masked words in a sentence and is also trained to predict the next sentence in a sequence of sentences.\n",
-    "- The pre-trained model can then be fine-tuned on a variety of downstream NLP tasks with state-of-the-art results.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbc7ca46",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "BERT builds on two key ideas:\n",
-    "\n",
-    "- The transformer architecture {cite}`vaswani2017attention`\n",
-    "- Unsupervised pre-training\n",
-    "\n",
-    "BERT is pre-trained on a large corpus of unlabeled text. Its weights are learned by predicting masked words in a sentence and predicting the next sentence in a sequence of sentences.\n",
-    "\n",
-    "BERT is a deep bidirectional transformer model. It is a multi-headed beast with 12(24) layers, 12(16) attention heads, and 110 million parameters. Since model weights are not shared across layers, the total number of different attention weights is 12(24) x 12(16) = 144(384).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f0eec5e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## The Architecture of BERT\n",
-    "\n",
-    "The core component of BERT is the attention mechanism.\n",
-    "\n",
-    "Attention is a way for a model to assign weights to different parts of the input based on their importance to some task.\n",
-    "\n",
-    "For the sentence `The dog from down the street ran up to me and ___`, to complete the sentence, a model may give more attention to the word `dog` than to the word `street`. Because knowing that the subject of the sentence is a dog is more important than knowing that where the dog is from.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2965df5f",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Attention Mechanism\n",
-    "\n",
-    "The attention mechanism is quite simple. It is a function that takes in two inputs: a query and a key. The query is the part of the input that we want to focus on. The key is the part of the input that we want to compare the query to. The output of the attention mechanism is a weighted sum of the values of the key. The weights are computed by a function of the query and the key.\n",
-    "\n",
-    "Suppose you have some sequence of words $X$, where each element $x_i$ is a (refered to as the value) of dimension $d$.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b68945e1",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "In the following example, $X$ is a sequence of 3 words, each represented by a 4-dimensional vector.\n",
-    "\n",
-    "![](../figs/deep_nlp/bert/sentence_vector.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d6f583c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Attention is simply a function that takes X as input and returns another sequence Y of the same length as X, composed of vectors of the same dimension as the vectors in X.\n",
-    "\n",
-    "![](../figs/deep_nlp/bert/attention_input_output.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "928bc752",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Each vector in Y is computed by taking a weighted average of the vectors in X.\n",
-    "\n",
-    "![](../figs/deep_nlp/bert/attention_weighted_average.gif)\n",
-    "\n",
-    "That is, attention is just a weighted average of the values of the vectors in X. The weights show how much the model **attends** to each vector in X when computing the output vector.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6bc9789",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Attending to language\n",
-    "\n",
-    "How does attention work in the context of language?\n",
-    "\n",
-    "Suppose we have a sentence `the dog ran`. We can represent this sentence as a sequence of vectors, where each vector is a word embedding.\n",
-    "\n",
-    "![](../figs/deep_nlp/bert/word_embedding.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63b60875",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "A word embedding is a vector representation of a word. It is a vector of real numbers. Each element of the vector represents a dimension of the word that captures some aspect of its meaning.\n",
-    "\n",
-    "Those aspects can be semantic, syntactic, or even phonetic. For example, the first element of the vector may represent the semantic meaning of the word, the second element may represent the syntactic meaning of the word, and the third element may represent the phonetic meaning of the word.\n",
-    "\n",
-    "In practice, word embeddings are not interpretable. We don't know what each element of the vector represents. But we can use them to compute the meaning of a sentence.\n",
-    "\n",
-    "For example, we can perform arithmetic operations on word embeddings. For example, we can compute the vector representation of the word `cat` by adding the vectors of the words `kitten` and `dog` and subtracting the vector of the word `puppy`.\n",
-    "\n",
-    "$$\\text{cat} - \\text{kitten} \\approx \\text{dog} - \\text{puppy}$$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00902281",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Attention is also a form of arithmetic operation. Therefore, you can apply attention to word embeddings to compute the meaning of a sentence.\n",
-    "\n",
-    "![](../figs/deep_nlp/bert/attention_weighted_average.gif)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9cccfc38",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "For example, the embedding of the word `dog` in $Y$ is computed by taking a weighted average of the embeddings of the words `the`, `dog`, and `ran` in $X$ with weights of 0.2, 0.7, and 0.1 respectively.\n",
-    "\n",
-    "How does this process help the model to understand the meaning of a sentence?\n",
-    "\n",
-    "To fully understand the meaning of a sentence, we need to know the meaning of each word in the sentence. But we can't just look at each word in the sentence in isolation. We need to know the context of the word.\n",
-    "\n",
-    "The attention mechanism allows the model to focus on the words that are most important to the meaning of the sentence.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2d32a4c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Multi-head attention\n",
-    "\n",
-    "BERT learns multiple attention mechanisms, called heads, which operate in parallel. Each head is a different attention mechanism. The output of each head is concatenated and fed into a feed-forward neural network.\n",
-    "\n",
-    "Multi-head attention enables the model to learn broader types of relationships between words in a sentence than a single attention mechanism.\n",
-    "\n",
-    "BERT also stacks multiple layers of multi-head attention. Each layer of multi-head attention takes the output of the previous layer as input. The output of the last layer of multi-head attention is fed into a feed-forward neural network.\n",
-    "\n",
-    "Through this architecture, BERT is able to learn very rich representations of language as it gets to the deeper layers of the network.\n",
-    "\n",
-    "Because the attention heads do not share parameters, each head learns a different type of relationship between words in a sentence.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af1c47ca-ae3f-4a87-acdf-2f4889f5d11b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Visualizing Attention\n"
+    "# BERT: Visualizing Attention\n"
    ]
   },
   {
@@ -297,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b171cd3e-cc80-479b-b91d-c12a3a5b9f72",
    "metadata": {
@@ -344,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f8535a8-559d-4e06-939f-b6b1bcb999d1",
    "metadata": {
@@ -361,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "742accb2-852c-40ac-bb86-c4cd037aaaf0",
    "metadata": {
@@ -412,6 +184,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "85255662-f851-4b00-8d66-56dbf5d01f78",
    "metadata": {
@@ -435,6 +208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31404513-013b-49f2-a5fe-9dbc88e4ad15",
    "metadata": {
@@ -448,6 +222,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31878e79",
    "metadata": {},
@@ -525,6 +300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "00cdbce6",
    "metadata": {
@@ -538,6 +314,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0211232-99e3-4dd9-af91-95e1c852a0b8",
    "metadata": {
@@ -568,6 +345,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c1f99143-e4a0-4b89-8457-3c5736dd8eac",
    "metadata": {
@@ -583,6 +361,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "39750a4b-9cc2-4fe0-a9b3-cbf22aeccd2d",
    "metadata": {
@@ -600,6 +379,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c66fcde-b4ca-4b14-b47d-db7aa848afd1",
    "metadata": {
@@ -627,6 +407,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b42fd159-3c6b-4bcc-be76-f524589163d3",
    "metadata": {
@@ -646,6 +427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "516786d2-c943-414d-95cf-0343f0e23519",
    "metadata": {
@@ -659,6 +441,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5cef778f-b94d-48ff-9316-55635d8065f7",
    "metadata": {
@@ -676,6 +459,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c58dfe1-1910-4871-8605-8a1521c8bdc8",
    "metadata": {
@@ -691,6 +475,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb697c64-cce4-4d77-b0f2-8d3ee5c6d494",
    "metadata": {
@@ -753,6 +538,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5873eff4-ac3e-4a25-8efa-a0a044c909d7",
    "metadata": {},
@@ -765,6 +551,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc3a7e02",
    "metadata": {
@@ -800,6 +587,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b1c6042",
    "metadata": {
@@ -835,6 +623,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0910a0a3",
    "metadata": {
@@ -868,6 +657,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "56922718",
    "metadata": {
@@ -901,6 +691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3241aacc",
    "metadata": {
