docs(deepnlp): update bert

--- a/book/lectures/nlp_deep/bert/index.ipynb
+++ b/book/lectures/nlp_deep/bert/index.ipynb
@@ -137,6 +137,39 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "4902f1ca",
+   "metadata": {},
+   "source": [
+    "### Attention in BERT (Easy Version)\n",
+    "\n",
+    "The attention mechanism is a technique used by neural networks to focus on relevant parts of the input data when processing it. In the context of natural language processing, it helps the model pay more attention to important words in a sentence.\n",
+    "\n",
+    "Let's illustrate the attention mechanism with a simple example:\n",
+    "\n",
+    "```mermaid\n",
+    "graph TD\n",
+    "A[Input: the cat ran] --> B[Attention Weights] --> C[Output: cat]\n",
+    "```\n",
+    "\n",
+    "In this example, we have an input sentence \"the cat ran\". The attention mechanism assigns weights to each word in the sentence based on their importance. These weights are represented by the \"Attention Weights\" node in the diagram.\n",
+    "\n",
+    "After calculating the attention weights, the model computes an output by combining the input words according to the weights. In this case, the model focuses more on the word \"cat\" and generates an output accordingly.\n",
+    "\n",
+    "Here is another diagram showing the attention mechanism with attention weights:\n",
+    "\n",
+    "```mermaid\n",
+    "graph LR\n",
+    "A[Input: the cat ran] --> B[Attention Weights: 0.1, 0.8, 0.1] --> C[Output: cat]\n",
+    "```\n",
+    "\n",
+    "In this diagram, we have added attention weights for each word in the input sentence. The weights (0.1, 0.8, 0.1) indicate that the model focuses most of its attention on the word \"cat\" (0.8), while giving less importance to the words \"the\" and \"ran\" (0.1 each).\n",
+    "\n",
+    "To sum up, the attention mechanism allows a neural network to focus on the most relevant parts of the input data by assigning importance weights to the elements, making it easier for the model to process and understand the input.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "d2d32a4c",
    "metadata": {
     "slideshow": {
