docs(deepnlp): update bert and bertviz

--- a/book/lectures/nlp_deep/bert/index.ipynb
+++ b/book/lectures/nlp_deep/bert/index.ipynb
@@ -146,7 +146,9 @@
     "\n",
     "Let's illustrate the attention mechanism with a simple example:\n",
     "\n",
-    "```mermaid\n",
+    "```{mermaid}\n",
+    ":align: center\n",
+    "\n",
     "graph TD\n",
     "A[Input: the cat ran] --> B[Attention Weights] --> C[Output: cat]\n",
     "```\n",
@@ -157,7 +159,9 @@
     "\n",
     "Here is another diagram showing the attention mechanism with attention weights:\n",
     "\n",
-    "```mermaid\n",
+    "```{mermaid}\n",
+    ":align: center\n",
+    "\n",
     "graph LR\n",
     "A[Input: the cat ran] --> B[Attention Weights: 0.1, 0.8, 0.1] --> C[Output: cat]\n",
     "```\n",
@@ -165,6 +169,92 @@
     "In this diagram, we have added attention weights for each word in the input sentence. The weights (0.1, 0.8, 0.1) indicate that the model focuses most of its attention on the word \"cat\" (0.8), while giving less importance to the words \"the\" and \"ran\" (0.1 each).\n",
     "\n",
     "To sum up, the attention mechanism allows a neural network to focus on the most relevant parts of the input data by assigning importance weights to the elements, making it easier for the model to process and understand the input.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5b48dbe4",
+   "metadata": {},
+   "source": [
+    "## Deconstructing Attention\n",
+    "\n",
+    "Let's dive deeper into the attention mechanism and understand how it computes the weights for each word in the input.\n",
+    "\n",
+    "As we know, attention is a **weighted average** of the values of the vectors in X. The critical aspect here is determining how these weights are computed. To do so, attention relies on **queries** and **keys**.\n",
+    "\n",
+    "```{figure} figs/attention_query_key.png\n",
+    "---\n",
+    "width: 80%\n",
+    "name: fig-attention_query_key\n",
+    "---\n",
+    "Attention query and key\n",
+    "```\n",
+    "\n",
+    "**Queries** and **keys** are similar to word embeddings, like the value vectors we saw earlier. However, they are specifically designed for determining the similarity between words in the input.\n",
+    "\n",
+    "The **similarity** between two words is calculated by taking the **dot product** of the query and key vectors of those words.\n",
+    "\n",
+    "```{figure} figs/attention_query_key_dot_product.png\n",
+    "---\n",
+    "width: 80%\n",
+    "name: fig-attention_query_key_dot_product\n",
+    "---\n",
+    "Attention query and key dot product\n",
+    "```\n",
+    "\n",
+    "To transform the dot product into a **probability**, we apply a **softmax function** to the dot product. The softmax function normalizes the dot product so that it sums to 1, giving us a probability distribution.\n",
+    "\n",
+    "```{figure} figs/attention_query_key_softmax.png\n",
+    "---\n",
+    "width: 80%\n",
+    "name: fig-attention_query_key_softmax\n",
+    "---\n",
+    "Attention query and key softmax\n",
+    "```\n",
+    "\n",
+    "The softmax values on the right represent the final weights of the attention mechanism. These weights indicate the importance of each word in the input when computing the output vector.\n",
+    "\n",
+    "In summary, the attention mechanism calculates the importance of each word in the input by comparing their query and key vectors through the dot product. It then normalizes these dot products using the softmax function to obtain the final attention weights.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4d0debaf",
+   "metadata": {},
+   "source": [
+    "### The Origin of Query and Key Vectors\n",
+    "\n",
+    "We have seen that attention weights are computed using query and key vectors, but how are these vectors generated?\n",
+    "\n",
+    "The **query and key vectors** are derived from the value vectors. They are calculated by passing the value vectors through **two different linear layers**.\n",
+    "\n",
+    "We can visualize the process of computing attention weights from query and key vectors using the **neuron view**.\n",
+    "\n",
+    "```{figure} figs/neuron_view.png\n",
+    "---\n",
+    "width: 80%\n",
+    "name: fig-neuron_view\n",
+    "---\n",
+    "Neuron view\n",
+    "```\n",
+    "\n",
+    "The neuron view demonstrates the computation of attention from the selected word on the left to the entire sequence of words on the right. Positive values are displayed in blue and negative values in orange, with the color intensity representing the magnitude.\n",
+    "\n",
+    "Let's examine each column in the neuron view individually:\n",
+    "\n",
+    "**Query q**: The query vector 'q' encodes the word on the left that is paying attention or \"querying\" the other words. In the example above, the query vector for \"on\" (the selected word) is highlighted.\n",
+    "\n",
+    "**Key k**: The key vector 'k' encodes the word on the right to which attention is being directed. The query vector and key vector work together to determine a compatibility score between the two words.\n",
+    "\n",
+    "**q×k (elementwise)**: This is the elementwise product between the query vector of the selected word and each of the key vectors. Although it is a precursor to the dot product (the sum of the elementwise product), it is included in the visualization to show how individual elements in the query and key vectors contribute to the dot product.\n",
+    "\n",
+    "**q·k**: This is the scaled dot product of the selected query vector and each of the key vectors. It represents the unnormalized attention score.\n",
+    "\n",
+    "**Softmax**: This column displays the softmax of the scaled dot product, which normalizes the attention scores to be positive and sum to one.\n",
+    "\n",
+    "In summary, the attention mechanism computes attention weights using query and key vectors, which are derived from value vectors by passing them through two distinct linear layers. The neuron view provides a visualization of this process, illustrating the calculation of attention scores and their normalization using softmax.\n"
    ]
   },
   {
