refactor: topic model lectures

--- a/book/lectures/nlp_intro/topic/index.ipynb
+++ b/book/lectures/nlp_intro/topic/index.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Topic Modeling\n",
     "\n",
-    "![](../figs/intro_nlp/topic/entelecheia_grouping.png)\n"
+    "![](figs/entelecheia_grouping.png)\n"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "source": [
     "## Latent Dirichlet Allocation (LDA)\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/14.png\n",
+    "```{figure} figs/14.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-lda\n",
@@ -132,7 +132,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/intro_nlp/topic/16.png\n",
+    "```{figure} figs/16.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-lda-example\n",
@@ -172,7 +172,7 @@
     "3.  Who is the greatest political leader in the world and why? (Politics)\n",
     "4.  Why do people treat politics like it's a football team or some kind of sport? (Sport, Politics)\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/17.png\n",
+    "```{figure} figs/17.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-lda-example-topics\n",
@@ -194,7 +194,7 @@
    "source": [
     "LDA represents each question as a probability distribution of topics and each topic as a probability distribution of words. In other words, every question can be seen as a mixture of topics, and every topic can be viewed as a mixture of words.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/18.png\n",
+    "```{figure} figs/18.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-lda-topic-dist\n",
@@ -218,7 +218,7 @@
    "source": [
     "## Non-negative Matrix Factorization (NMF)\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/19.png\n",
+    "```{figure} figs/19.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-nmf\n",
@@ -256,7 +256,7 @@
     "\n",
     "The term-topic matrix represents the relationship between terms and topics, where each topic is characterized by a distribution of words. The document-topic matrix represents the relationship between documents (questions) and topics, where each document is a mixture of topics with varying proportions.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/20.png\n",
+    "```{figure} figs/20.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-nmf-example\n",
@@ -266,7 +266,7 @@
     "\n",
     "After applying NMF, we can examine the resulting term-topic and document-topic matrices to identify the underlying topics and their association with the original questions. For instance, we might find that Topic 1 is related to football and sports, while Topic 2 is related to politics and leadership. The document-topic matrix would then show the extent to which each question is associated with these topics, allowing us to interpret the hidden topic structure in the data.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/21.png\n",
+    "```{figure} figs/21.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-nmf-example2\n",
@@ -401,7 +401,7 @@
     "\n",
     "It is important to note that this representation does not consider word order or sentence structure and is an example of a **bag of words** approach.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/document_term.png\n",
+    "```{figure} figs/document_term.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-document-term\n",
@@ -876,7 +876,7 @@
     "\n",
     "The SVD algorithm factorizes a matrix into one matrix with **orthogonal columns** and one with **orthogonal rows**, along with a diagonal matrix that contains the **relative importance** of each factor. SVD is an **exact decomposition** as the resulting matrices fully cover the original matrix. It is widely used in data science for tasks such as semantic analysis, collaborative filtering, data compression, and principal component analysis. Latent Semantic Analysis (LSA) also employs SVD.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/svd_fb.png\n",
+    "```{figure} figs/svd_fb.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-svd-fb\n",
@@ -1019,7 +1019,7 @@
     "\n",
     "NMF is a non-exact factorization that factors a matrix into one skinny positive matrix and one short positive matrix. It is NP-hard and non-unique, with various versions created by adding different constraints.\n",
     "\n",
-    "```{figure} ../figs/intro_nlp/topic/nmf_doc.png\n",
+    "```{figure} figs/nmf_doc.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-nmf-doc\n",
@@ -1238,7 +1238,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/intro_nlp/topic/2.png\n",
+    "```{figure} figs/2.png\n",
     "---\n",
     "width: 70%\n",
     "name: fig-cosine-sim\n",
@@ -1258,7 +1258,7 @@
     "tags": []
    },
    "source": [
-    "```{figure} ../figs/intro_nlp/topic/3-800x852.png\n",
+    "```{figure} figs/3-800x852.png\n",
     "---\n",
     "width: 60%\n",
     "name: fig-projected-docs\n",
@@ -1305,6 +1305,25 @@
     "\n",
     "To perform document clustering, first preprocess the text data (e.g., tokenization, stemming, and removing stop words), convert the documents into a suitable vector representation (e.g., TF-IDF or word embeddings), and then apply the desired clustering algorithm to group similar documents together.\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d53c0d22",
+   "metadata": {},
+   "source": [
+    "## Next\n",
+    "\n",
+    "```{tableofcontents}\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73f8d97",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
